# BLAKE3-STD

./: Cargo.toml  LICENSE  README.md
bench atonce with size 1024/BLAKE2B/base/: estimates.json
bench atonce with size 1024/BLAKE2S/base/: estimates.json
bench atonce with size 1024/MD5/new/: raw.csv
bench atonce with size 1024/SHA256/new/: raw.csv
bench atonce with size 1024/SHA384/base/: tukey.json
bench atonce with size 1024/SHA384/new/: raw.csv
bench atonce with size 1024/SHA384/report/: index.html
bench atonce with size 1024/SHA512/base/: sample.json
bench atonce with size 1024/report/: index.html
bench atonce with size 1048576/BLAKE2B/base/: benchmark.json
bench atonce with size 1048576/BLAKE2B_2/base/: benchmark.json
bench atonce with size 1048576/BLAKE2S/base/: raw.csv  sample.json
bench atonce with size 1048576/BLAKE2S_2/base/: benchmark.json
bench atonce with size 1048576/BLAKE2S_3/base/: tukey.json
bench atonce with size 1048576/BLAKE3_STD/new/: benchmark.json  tukey.json
bench atonce with size 1048576/BLAKE3_STD_3/base/: tukey.json
bench atonce with size 1048576/MD5_2/base/: benchmark.json
bench atonce with size 1048576/SHA256/new/: tukey.json
bench atonce with size 1048576/SHA256/report/: index.html
bench atonce with size 1048576/SHA256_2/new/: estimates.json
bench atonce with size 131072/report/: index.html
bench atonce with size 4096/report/: index.html
benches/: bench_atonce.rs  bench_main.rs
docs/report/: index.html
src/: arith.rs  fallback.rs  join.rs  lib.rs  reference_impl.rs  test.rs
(+581 files in other folders)
