[package]
name = "blake3-std"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
description = "the BLAKE3 hash function implementation with std::simd"
authors = ["Jack O'Connor <oconnor663@gmail.com>", "LemonHX <lemonhx@lemonhx.tech>"]
repository = "https://github.com/LemonHX/BLAKE3-STD"
features = ["rayon"]

[[bench]]
name = "bench_main"
harness = false
path = "benches/bench_main.rs"

[dev-dependencies]
rand_chacha = "0.3.1"
criterion = "0.3"
md5 = "0.7"
blake2 = "0.9"
sha2 = "0.9"

[dependencies]
arrayvec = "0.7"
rand = "0.8"
